syntax = "proto3";
package google.protobuf;
option csharp_namespace = "Proto.Dota";

option optimize_for = SPEED;
option cc_generic_services = false;

enum EBaseGameEvents {
	GE_UKNOWN = 0;
	GE_VDebugGameSessionIDEvent = 200;
	GE_PlaceDecalEvent = 201;
	GE_ClearWorldDecalsEvent = 202;
	GE_ClearEntityDecalsEvent = 203;
	GE_ClearDecalsForSkeletonInstanceEvent = 204;
	GE_Source1LegacyGameEventList = 205;
	GE_Source1LegacyListenEvents = 206;
	GE_Source1LegacyGameEvent = 207;
	GE_SosStartSoundEvent = 208;
	GE_SosStopSoundEvent = 209;
	GE_SosSetSoundEventParams = 210;
	GE_SosSetLibraryStackFields = 211;
	GE_SosStopSoundEventHash = 212;
}

message CMsgSource1LegacyGameEventList {
	message key_t {
		  int32 type = 1;
		  string name = 2;
	}

	message descriptor_t {
		  int32 eventid = 1;
		  string name = 2;
		repeated CMsgSource1LegacyGameEventList.key_t keys = 3;
	}

	repeated CMsgSource1LegacyGameEventList.descriptor_t descriptors = 1;
}

message CMsgSource1LegacyListenEvents {
	  int32 playerslot = 1;
	repeated uint32 eventarraybits = 2;
}

message CMsgSource1LegacyGameEvent {
	message key_t {
		  int32 type = 1;
		  string val_string = 2;
		  float val_float = 3;
		  int32 val_long = 4;
		  int32 val_short = 5;
		  int32 val_byte = 6;
		  bool val_bool = 7;
		  uint64 val_uint64 = 8;
	}

	  string event_name = 1;
	  int32 eventid = 2;
	repeated CMsgSource1LegacyGameEvent.key_t keys = 3;
}

message CMsgSosStartSoundEvent {
	  int32 soundevent_guid = 1;
	  fixed32 soundevent_hash = 2;
	  int32 source_entity_index = 3;
	  int32 seed = 4;
	  bytes packed_params = 5;
	  float start_time = 6;
}

message CMsgSosStopSoundEvent {
	  int32 soundevent_guid = 1;
}

message CMsgSosStopSoundEventHash {
	  fixed32 soundevent_hash = 1;
	  int32 source_entity_index = 2;
}

message CMsgSosSetSoundEventParams {
	  int32 soundevent_guid = 1;
	  bytes packed_params = 5;
}


