using System;
using System.Collections.Generic;
using System.Reflection;
using Proto.Dota;

namespace Oracle

{
    public class CommandType
    {

        public static object GetCommandType(int kind)
        {
            if (MapTypes.ContainsKey(kind) == true)
            {
                MapTypes.TryGetValue(kind, out var CommandObject);
                return CommandObject;
            }

            // Searching type command is not exist, so we return -1.
            return -1;
        }
        
        public static Dictionary<int, object> MapTypes { get; } = new Dictionary<int, object>
        {
        /*   0 */ {0, new CNETMsg_NOP()},        
        /*   1 */ {1, new CNETMsg_Disconnect()},
        /*   4 */ {4, new CNETMsg_Tick()},
        /*   6 */ {6, new CNETMsg_SetConVar()},
        /*   7 */ {7, new CNETMsg_SignonState()},
        /*   8 */ {8, new CNETMsg_SpawnGroup_Load()},
        /*   9 */ {9, new CNETMsg_SpawnGroup_ManifestUpdate()},
        /*  11 */ {11, new CNETMsg_SpawnGroup_SetCreationTick()},
        /*  12 */ {12, new CNETMsg_SpawnGroup_Unload()},
        /*  13 */ {13, new CNETMsg_SpawnGroup_LoadCompleted()},

        /*  20 */ {20, new CCLCMsg_ClientInfo()},
        /*  21 */ {21, new CCLCMsg_Move()},
        /*  23 */ {23, new CCLCMsg_BaselineAck()},
        /*  27 */ {27, new CCLCMsg_LoadingProgress()},

        /*  40 */ {40, new CSVCMsg_ServerInfo()},
        /*  41 */ {41, new CSVCMsg_FlattenedSerializer()},
        /*  42 */ {42, new CSVCMsg_ClassInfo()},
        /*  44 */ {44, new CSVCMsg_CreateStringTable()},
        /*  45 */ {45, new CSVCMsg_UpdateStringTable()},
        /*  46 */ {46, new CSVCMsg_VoiceInit()},
        /*  47 */ {47, new CSVCMsg_VoiceData()},
        /*  48 */ {48, new CSVCMsg_Print()},
        /*  50 */ {50, new CSVCMsg_SetView()},
        /*  51 */ {51, new CSVCMsg_ClearAllStringTables()},
        /*  55 */ {55, new CSVCMsg_PacketEntities()},
        /*  60 */ {60, new CSVCMsg_PeerList()},
        /*  62 */ {62, new CSVCMsg_HLTVStatus()},
        /*  70 */ {70, new CSVCMsg_FullFrameSplit()},

        /* 115 */ {115, new CUserMessageResetHUD()},
        /* 118 */ {118, new CUserMessageSayText2()},
        /* 124 */ {124, new CUserMessageTextMsg()},
        /* 128 */ {128, new CUserMessageVoiceMask()},
        /* 130 */ {130, new CUserMessageSendAudio()},
        /* 145 */ {145, new CDOTAUserMsg_ParticleManager()},

//        /* 101 */ {101, new CUserMessageAchievementEvent()},
//        /* 102 */ {102, new CUserMessageCloseCaption()},
//        /* 103 */ {103, new CUserMessageCloseCaptionDirect()},
//        /* 104 */ {104, new CUserMessageCurrentTimescale()},
//        /* 105 */ {105, new CUserMessageDesiredTimescale()},
//        /* 106 */ {106, new CUserMessageFade()},
//        /* 107 */ {107, new CUserMessageGameTitle()},
//        /* 109 */ {109, new CUserMessageHintText()},
//        /* 110 */ {110, new CUserMessageHudMsg()},
//        /* 111 */ {111, new CUserMessageHudText()},
//        /* 112 */ {112, new CUserMessageKeyHintText()},
//        /* 113 */ {113, new CUserMessageColoredText()},
//        /* 114 */ {114, new CUserMessageRequestState()},
//        /* 116 */ {116, new CUserMessageRumble()},
//        /* 117 */ {117, new CUserMessageSayText()},
//        /* 119 */ {119, new CUserMessageSayTextChannel()},
//        /* 120 */ {120, new CUserMessageShake()},
//        /* 121 */ {121, new CUserMessageShakeDir()},
//        /* 125 */ {125, new CUserMessageScreenTilt()},
//        /* 126 */ {126, new CUserMessageTrain()},
//        /* 127 */ {127, new CUserMessageVGUIMenu()},
//        /* 129 */ {129, new CUserMessageVoiceSubtitle()},
//        /* 131 */ {131, new CUserMessageItemPickup()},
//        /* 132 */ {132, new CUserMessageAmmoDenied()},
//        /* 133 */ {133, new CUserMessageCrosshairAngle()},
//        /* 134 */ {134, new CUserMessageShowMenu()},
//        /* 135 */ {135, new CUserMessageCreditsMsg()},
//        /* 142 */ {142, new CUserMessageCloseCaptionPlaceholder()},
//        /* 143 */ {143, new CUserMessageCameraTransition()},
//        /* 144 */ {144, new CUserMessageAudioParameter()},
//        /* 148 */ {148, null},
//        /* 149 */ {149, null},

        /* 205 */ {205, new CSVCMsg_GameEventList()},
        /* 206 */ {206, new CMsgSource1LegacyListenEvents()},
        /* 207 */ {207, new CSVCMsg_GameEvent()},
        /* 208 */ {208, new CMsgSosStartSoundEvent()},
        /* 209 */ {209, new CMsgSosStopSoundEvent()},
        /* 210 */ {210, new CMsgSosSetSoundEventParams()},
        /* 212 */ {212, new CMsgSosStopSoundEventHash()},

//        /* 200 */ {200, new CMsgVDebugGameSessionIDEvent()},
//        /* 201 */ {201, new CMsgPlaceDecalEvent()},
//        /* 202 */ {202, new CMsgClearWorldDecalsEvent()},
//        /* 203 */ {203, new CMsgClearEntityDecalsEvent()},
//        /* 204 */ {204, new CMsgClearDecalsForSkeletonInstanceEvent()},
//        /* 211 */ {211, new CMsgSosSetLibraryStackFields()},

        /* 400 */ {400, new CMsgTEEffectDispatch()},

        /* 466 */ {466, new CDOTAUserMsg_ChatEvent()},
        /* 470 */ {470, new CDOTAUserMsg_CombatLogBulkData()},
        /* 471 */ {471, new CDOTAUserMsg_CreateLinearProjectile()},
        /* 472 */ {472, new CDOTAUserMsg_DestroyLinearProjectile()},
        /* 474 */ {474, new CDOTAUserMsg_GlobalLightColor()},
        /* 475 */ {475, new CDOTAUserMsg_GlobalLightDirection()},
        /* 473 */ {473, new CDOTAUserMsg_DodgeTrackingProjectiles()},
        /* 477 */ {477, new CDOTAUserMsg_LocationPing()},
        /* 478 */ {478, new CDOTAUserMsg_MapLine()},
        /* 479 */ {479, new CDOTAUserMsg_MiniKillCamInfo()},
        /* 481 */ {481, new CDOTAUserMsg_MinimapEvent()},
        /* 482 */ {482, new CDOTAUserMsg_NevermoreRequiem()},
        /* 483 */ {483, new CDOTAUserMsg_OverheadEvent()},
        /* 485 */ {485, new CDOTAUserMsg_SharedCooldown()},
        /* 486 */ {486, new CDOTAUserMsg_SpectatorPlayerClick()},
        /* 488 */ {488, new CDOTAUserMsg_UnitEvent()},
        /* 489 */ {489, new CDOTAUserMsg_ParticleManager()},
        /* 490 */ {490, new CDOTAUserMsg_BotChat()},
        /* 491 */ {491, new CDOTAUserMsg_HudError()},
        /* 492 */ {492, new CDOTAUserMsg_ItemPurchased()},
        /* 497 */ {497, new CDOTAUserMsg_WorldLine()},
        /* 501 */ {501, new CDOTAUserMsg_ChatWheel()},
        /* 506 */ {506, new CDOTAUserMsg_GamerulesStateChanged()},
        /* 510 */ {510, new CDOTAUserMsg_SendStatPopup()},
        /* 512 */ {512, new CDOTAUserMsg_SendRoshanPopup()},
        /* 518 */ {518, new CDOTAUserMsg_TE_Projectile()},
        /* 519 */ {519, new CDOTAUserMsg_TE_ProjectileLoc()},
        /* 520 */ {520, new CDOTAUserMsg_TE_DotaBloodImpact()},
        /* 521 */ {521, new CDOTAUserMsg_TE_UnitAnimation()},
        /* 522 */ {522, new CDOTAUserMsg_TE_UnitAnimationEnd()},
        /* 532 */ {532, new CDOTAUserMsg_AbilitySteal()},
        /* 533 */ {533, new CDOTAUserMsg_CourierKilledAlert()},
        /* 534 */ {534, new CDOTAUserMsg_EnemyItemAlert()},
        /* 542 */ {542, new CDOTAUserMsg_PredictionResult()},
        /* 543 */ {543, new CDOTAUserMsg_ModifierAlert()},
        /* 544 */ {544, new CDOTAUserMsg_HPManaAlert()},
        /* 547 */ {547, new CDOTAUserMsg_SpectatorPlayerUnitOrders()},
        /* 552 */ {552, new CDOTAUserMsg_ProjectionAbility()},
        /* 553 */ {553, new CDOTAUserMsg_ProjectionEvent()},
        /* 554 */ {554, new CMsgDOTACombatLogEntry()},
        /* 555 */ {555, new CDOTAUserMsg_XPAlert()},
        /* 557 */ {557, new CDOTAMatchMetadataFile()},
        /* 558 */ {558, new CMsgDOTAMatch()},
        /* 563 */ {563, new CDOTAUserMsg_SelectPenaltyGold()},
        /* 564 */ {564, new CDOTAUserMsg_RollDiceResult()},
        /* 565 */ {565, new CDOTAUserMsg_FlipCoinResult()},
        /* 567 */ {567, new CDOTAUserMessage_TeamCaptainChanged()},
        /* 568 */ {568, new CDOTAUserMsg_SendRoshanSpectatorPhase()},
        /* 572 */ {572, new CDOTAUserMsg_HeroRelicProgress()},
        /* 575 */ {575, new CDOTAUserMsg_DamageReport()},
        /* 576 */ {576, new CDOTAUserMsg_SalutePlayer()},
        /* 577 */ {577, new CDOTAUserMsg_TipAlert()},

//        /* 464 */ {464, null},
//        /* 465 */ {465, new CDOTAUserMsg_AIDebugLine()},
//        /* 467 */ {467, new CDOTAUserMsg_CombatHeroPositions()},
//        /* 468 */ {468, null},
//        /* 476 */ {476, new CDOTAUserMsg_InvalidCommand()},
//        /* 480 */ {480, new CDOTAUserMsg_MinimapDebugPoint()},
//        /* 484 */ {484, new CDOTAUserMsg_SetNextAutobuyItem()},
//        /* 487 */ {487, new CDOTAUserMsg_TutorialTipInfo()},
//        /* 493 */ {493, new CDOTAUserMsg_Ping()},
//        /* 494 */ {494, new CDOTAUserMsg_ItemFound()},
//        /* 495 */ {495, null},
//        /* 496 */ {496, new CDOTAUserMsg_SwapVerify()},
//        /* 498 */ {498, null},
//        /* 499 */ {499, new CDOTAUserMsg_ItemAlert()},
//        /* 500 */ {500, new CDOTAUserMsg_HalloweenDrops()},
//        /* 502 */ {502, new CDOTAUserMsg_ReceivedXmasGift()},
//        /* 503 */ {503, new CDOTAUserMsg_UpdateSharedContent()},
//        /* 504 */ {504, new CDOTAUserMsg_TutorialRequestExp()},
//        /* 505 */ {505, new CDOTAUserMsg_TutorialPingMinimap()},
//        /* 507 */ {507, new CDOTAUserMsg_ShowSurvey()},
//        /* 508 */ {508, new CDOTAUserMsg_TutorialFade()},
//        /* 509 */ {509, new CDOTAUserMsg_AddQuestLogEntry()},
//        /* 511 */ {511, new CDOTAUserMsg_TutorialFinish()},
//        /* 513 */ {513, new CDOTAUserMsg_SendGenericToolTip()},
//        /* 514 */ {514, new CDOTAUserMsg_SendFinalGold()},
//        /* 515 */ {515, new CDOTAUserMsg_CustomMsg()},
//        /* 516 */ {516, new CDOTAUserMsg_CoachHUDPing()},
//        /* 517 */ {517, new CDOTAUserMsg_ClientLoadGridNav()},
//        /* 523 */ {523, new CDOTAUserMsg_AbilityPing()},
//        /* 524 */ {524, new CDOTAUserMsg_ShowGenericPopup()},
//        /* 525 */ {525, new CDOTAUserMsg_VoteStart()},
//        /* 526 */ {526, new CDOTAUserMsg_VoteUpdate()},
//        /* 527 */ {527, new CDOTAUserMsg_VoteEnd()},
//        /* 528 */ {528, new CDOTAUserMsg_BoosterState()},
//        /* 529 */ {529, new CDOTAUserMsg_WillPurchaseAlert()},
//        /* 530 */ {530, new CDOTAUserMsg_TutorialMinimapPosition()},
//        /* 531 */ {531, new CDOTAUserMsg_PlayerMMR()},
//        /* 535 */ {535, new CDOTAUserMsg_StatsMatchDetails()},
//        /* 536 */ {536, new CDOTAUserMsg_MiniTaunt()},
//        /* 537 */ {537, new CDOTAUserMsg_BuyBackStateAlert()},
//        /* 538 */ {538, new CDOTAUserMsg_SpeechBubble()},
//        /* 539 */ {539, new CDOTAUserMsg_CustomHeaderMessage()},
//        /* 540 */ {540, new CDOTAUserMsg_QuickBuyAlert()},
//        /* 541 */ {541, new CDOTAUserMsg_StatsHeroMinuteDetails()},
//        /* 545 */ {545, new CDOTAUserMsg_GlyphAlert()},
//        /* 546 */ {546, new CDOTAUserMsg_BeastChat()},
//        /* 548 */ {548, new CDOTAUserMsg_CustomHudElement_Create()},
//        /* 549 */ {549, new CDOTAUserMsg_CustomHudElement_Modify()},
//        /* 550 */ {550, new CDOTAUserMsg_CustomHudElement_Destroy()},
//        /* 551 */ {551, new CDOTAUserMsg_CompendiumState()},
//        /* 556 */ {556, new CDOTAUserMsg_UpdateQuestProgress()},
//        /* 559 */ {559, new CDOTAUserMsg_QuestStatus()},
//        /* 560 */ {560, new CDOTAUserMsg_SuggestHeroPick()},
//        /* 561 */ {561, new CDOTAUserMsg_SuggestHeroRole()},
//        /* 562 */ {562, new CDOTAUserMsg_KillcamDamageTaken()},
//        /* 566 */ {566, new CDOTAUserMessage_RequestItemSuggestions()},
//        /* 569 */ {569, new CDOTAUserMessage_ChatWheelCooldown()},
//        /* 570 */ {570, new CDOTAUserMessage_DismissAllStatPopups()},
//        /* 571 */ {571, new CDOTAUserMessage_TE_DestroyProjectile()},
//        /* 573 */ {573, new CDOTAUserMessage_AbilityDraftRequestAbility()},
//        /* 574 */ {574, new CDOTAUserMessage_ItemSold()},
//        /* 578 */ {578, new CDOTAUserMsg_ReplaceQueryUnit()},
//        /* 579 */ {579, new CDOTAUserMsg_EmptyTeleportAlert()},

        };



    }
}