using System.Collections.Generic;
using Google.Protobuf;
using Proto.Dota;

namespace Oracle
{
    public class PacketParserType
    {
        public static MessageParser GetParserByPacketType(int kind)
        {
            if (MapParser.ContainsKey(kind) == true)
            {
                MapParser.TryGetValue(kind, out var CommandObject);
                return CommandObject;
            }

            return null;
        }
        
        public static Dictionary<int, MessageParser> MapParser { get; } = new Dictionary<int, MessageParser>
        {
             /* 0 */ {0, CNETMsg_NOP.Parser },    
            /* 1 */ {1, CNETMsg_Disconnect.Parser},
            /* 4 */ {4, CNETMsg_Tick.Parser},
            /* 6 */ {6, CNETMsg_SetConVar.Parser},
            /* 7 */ {7, CNETMsg_SignonState.Parser},
            /* 8 */ {8, CNETMsg_SpawnGroup_Load.Parser},
            /* 9 */ {9, CNETMsg_SpawnGroup_ManifestUpdate.Parser},
            /*  11 */ {11, CNETMsg_SpawnGroup_SetCreationTick.Parser},
            /*  12 */ {12, CNETMsg_SpawnGroup_Unload.Parser},
            /*  13 */ {13, CNETMsg_SpawnGroup_LoadCompleted.Parser},
        
            /*  20 */ {20, CCLCMsg_ClientInfo.Parser},
            /*  21 */ {21, CCLCMsg_Move.Parser},
            /*  23 */ {23, CCLCMsg_BaselineAck.Parser},
            /*  27 */ {27, CCLCMsg_LoadingProgress.Parser},
        
            /*  40 */ {40, CSVCMsg_ServerInfo.Parser},
            /*  41 */ {41, CSVCMsg_FlattenedSerializer.Parser},
            /*  42 */ {42, CSVCMsg_ClassInfo.Parser},
            /*  44 */ {44, CSVCMsg_CreateStringTable.Parser},
            /*  45 */ {45, CSVCMsg_UpdateStringTable.Parser},
            /*  46 */ {46, CSVCMsg_VoiceInit.Parser},
            /*  47 */ {47, CSVCMsg_VoiceData.Parser},
            /*  48 */ {48, CSVCMsg_Print.Parser},
            /*  50 */ {50, CSVCMsg_SetView.Parser},
            /*  51 */ {51, CSVCMsg_ClearAllStringTables.Parser},
            /*  55 */ {55, CSVCMsg_PacketEntities.Parser},
            /*  60 */ {60, CSVCMsg_PeerList.Parser},
            /*  62 */ {62, CSVCMsg_HLTVStatus.Parser},
            /*  70 */ {70, CSVCMsg_FullFrameSplit.Parser},
        
            /* 115 */ {115, CUserMessageResetHUD.Parser},
            /* 118 */ {118, CUserMessageSayText2.Parser},
            /* 124 */ {124, CUserMessageTextMsg.Parser},
            /* 128 */ {128, CUserMessageVoiceMask.Parser},
            /* 130 */ {130, CUserMessageSendAudio.Parser},
            /* 145 */ {145, CDOTAUserMsg_ParticleManager.Parser},
        
        //    /* 101 */ {101, CUserMessageAchievementEvent.Parser},
        //    /* 102 */ {102, CUserMessageCloseCaption.Parser},
        //    /* 103 */ {103, CUserMessageCloseCaptionDirect.Parser},
        //    /* 104 */ {104, CUserMessageCurrentTimescale.Parser},
        //    /* 105 */ {105, CUserMessageDesiredTimescale.Parser},
        //    /* 106 */ {106, CUserMessageFade.Parser},
        //    /* 107 */ {107, CUserMessageGameTitle.Parser},
        //    /* 109 */ {109, CUserMessageHintText.Parser},
        //    /* 110 */ {110, CUserMessageHudMsg.Parser},
        //    /* 111 */ {111, CUserMessageHudText.Parser},
        //    /* 112 */ {112, CUserMessageKeyHintText.Parser},
        //    /* 113 */ {113, CUserMessageColoredText.Parser},
        //    /* 114 */ {114, CUserMessageRequestState.Parser},
        //    /* 116 */ {116, CUserMessageRumble.Parser},
        //    /* 117 */ {117, CUserMessageSayText.Parser},
        //    /* 119 */ {119, CUserMessageSayTextChannel.Parser},
        //    /* 120 */ {120, CUserMessageShake.Parser},
        //    /* 121 */ {121, CUserMessageShakeDir.Parser},
        //    /* 125 */ {125, CUserMessageScreenTilt.Parser},
        //    /* 126 */ {126, CUserMessageTrain.Parser},
        //    /* 127 */ {127, CUserMessageVGUIMenu.Parser},
        //    /* 129 */ {129, CUserMessageVoiceSubtitle.Parser},
        //    /* 131 */ {131, CUserMessageItemPickup.Parser},
        //    /* 132 */ {132, CUserMessageAmmoDenied.Parser},
        //    /* 133 */ {133, CUserMessageCrosshairAngle.Parser},
        //    /* 134 */ {134, CUserMessageShowMenu.Parser},
        //    /* 135 */ {135, CUserMessageCreditsMsg.Parser},
        //    /* 142 */ {142, CUserMessageCloseCaptionPlaceholder.Parser},
        //    /* 143 */ {143, CUserMessageCameraTransition.Parser},
        //    /* 144 */ {144, CUserMessageAudioParameter.Parser},
        //    /* 148 */ {148, null},
        //    /* 149 */ {149, null},
        
            /* 205 */ {205, CSVCMsg_GameEventList.Parser},
            /* 206 */ {206, CMsgSource1LegacyListenEvents.Parser},
            /* 207 */ {207, CSVCMsg_GameEvent.Parser},
            /* 208 */ {208, CMsgSosStartSoundEvent.Parser},
            /* 209 */ {209, CMsgSosStopSoundEvent.Parser},
            /* 210 */ {210, CMsgSosSetSoundEventParams.Parser},
            /* 212 */ {212, CMsgSosStopSoundEventHash.Parser},
        
        //    /* 200 */ {200, CMsgVDebugGameSessionIDEvent.Parser},
        //    /* 201 */ {201, CMsgPlaceDecalEvent.Parser},
        //    /* 202 */ {202, CMsgClearWorldDecalsEvent.Parser},
        //    /* 203 */ {203, CMsgClearEntityDecalsEvent.Parser},
        //    /* 204 */ {204, CMsgClearDecalsForSkeletonInstanceEvent.Parser},
        //    /* 211 */ {211, CMsgSosSetLibraryStackFields.Parser},
        
            /* 400 */ {400, CMsgTEEffectDispatch.Parser},
        
            /* 466 */ {466, CDOTAUserMsg_ChatEvent.Parser},
            /* 470 */ {470, CDOTAUserMsg_CombatLogBulkData.Parser},
            /* 471 */ {471, CDOTAUserMsg_CreateLinearProjectile.Parser},
            /* 472 */ {472, CDOTAUserMsg_DestroyLinearProjectile.Parser},
            /* 474 */ {474, CDOTAUserMsg_GlobalLightColor.Parser},
            /* 475 */ {475, CDOTAUserMsg_GlobalLightDirection.Parser},
            /* 473 */ {473, CDOTAUserMsg_DodgeTrackingProjectiles.Parser},
            /* 477 */ {477, CDOTAUserMsg_LocationPing.Parser},
            /* 478 */ {478, CDOTAUserMsg_MapLine.Parser},
            /* 479 */ {479, CDOTAUserMsg_MiniKillCamInfo.Parser},
            /* 481 */ {481, CDOTAUserMsg_MinimapEvent.Parser},
            /* 482 */ {482, CDOTAUserMsg_NevermoreRequiem.Parser},
            /* 483 */ {483, CDOTAUserMsg_OverheadEvent.Parser},
            /* 485 */ {485, CDOTAUserMsg_SharedCooldown.Parser},
            /* 486 */ {486, CDOTAUserMsg_SpectatorPlayerClick.Parser},
            /* 488 */ {488, CDOTAUserMsg_UnitEvent.Parser},
            /* 489 */ {489, CDOTAUserMsg_ParticleManager.Parser},
            /* 490 */ {490, CDOTAUserMsg_BotChat.Parser},
            /* 491 */ {491, CDOTAUserMsg_HudError.Parser},
            /* 492 */ {492, CDOTAUserMsg_ItemPurchased.Parser},
            /* 497 */ {497, CDOTAUserMsg_WorldLine.Parser},
            /* 501 */ {501, CDOTAUserMsg_ChatWheel.Parser},
            /* 506 */ {506, CDOTAUserMsg_GamerulesStateChanged.Parser},
            /* 510 */ {510, CDOTAUserMsg_SendStatPopup.Parser},
            /* 512 */ {512, CDOTAUserMsg_SendRoshanPopup.Parser},
            /* 518 */ {518, CDOTAUserMsg_TE_Projectile.Parser},
            /* 519 */ {519, CDOTAUserMsg_TE_ProjectileLoc.Parser},
            /* 520 */ {520, CDOTAUserMsg_TE_DotaBloodImpact.Parser},
            /* 521 */ {521, CDOTAUserMsg_TE_UnitAnimation.Parser},
            /* 522 */ {522, CDOTAUserMsg_TE_UnitAnimationEnd.Parser},
            /* 532 */ {532, CDOTAUserMsg_AbilitySteal.Parser},
            /* 533 */ {533, CDOTAUserMsg_CourierKilledAlert.Parser},
            /* 534 */ {534, CDOTAUserMsg_EnemyItemAlert.Parser},
            /* 542 */ {542, CDOTAUserMsg_PredictionResult.Parser},
            /* 543 */ {543, CDOTAUserMsg_ModifierAlert.Parser},
            /* 544 */ {544, CDOTAUserMsg_HPManaAlert.Parser},
            /* 547 */ {547, CDOTAUserMsg_SpectatorPlayerUnitOrders.Parser},
            /* 552 */ {552, CDOTAUserMsg_ProjectionAbility.Parser},
            /* 553 */ {553, CDOTAUserMsg_ProjectionEvent.Parser},
            /* 554 */ {554, CMsgDOTACombatLogEntry.Parser},
            /* 555 */ {555, CDOTAUserMsg_XPAlert.Parser},
            /* 557 */ {557, CDOTAMatchMetadataFile.Parser},
            /* 558 */ {558, CMsgDOTAMatch.Parser},
            /* 563 */ {563, CDOTAUserMsg_SelectPenaltyGold.Parser},
            /* 564 */ {564, CDOTAUserMsg_RollDiceResult.Parser},
            /* 565 */ {565, CDOTAUserMsg_FlipCoinResult.Parser},
            /* 567 */ {567, CDOTAUserMessage_TeamCaptainChanged.Parser},
            /* 568 */ {568, CDOTAUserMsg_SendRoshanSpectatorPhase.Parser},
            /* 572 */ {572, CDOTAUserMsg_HeroRelicProgress.Parser},
            /* 575 */ {575, CDOTAUserMsg_DamageReport.Parser},
            /* 576 */ {576, CDOTAUserMsg_SalutePlayer.Parser},
            /* 577 */ {577, CDOTAUserMsg_TipAlert.Parser},
        
        //    /* 464 */ {464, null},
        //    /* 465 */ {465, CDOTAUserMsg_AIDebugLine.Parser},
        //    /* 467 */ {467, CDOTAUserMsg_CombatHeroPositions.Parser},
        //    /* 468 */ {468, null},
        //    /* 476 */ {476, CDOTAUserMsg_InvalidCommand.Parser},
        //    /* 480 */ {480, CDOTAUserMsg_MinimapDebugPoint.Parser},
        //    /* 484 */ {484, CDOTAUserMsg_SetNextAutobuyItem.Parser},
        //    /* 487 */ {487, CDOTAUserMsg_TutorialTipInfo.Parser},
        //    /* 493 */ {493, CDOTAUserMsg_Ping.Parser},
        //    /* 494 */ {494, CDOTAUserMsg_ItemFound.Parser},
        //    /* 495 */ {495, null},
        //    /* 496 */ {496, CDOTAUserMsg_SwapVerify.Parser},
        //    /* 498 */ {498, null},
        //    /* 499 */ {499, CDOTAUserMsg_ItemAlert.Parser},
        //    /* 500 */ {500, CDOTAUserMsg_HalloweenDrops.Parser},
        //    /* 502 */ {502, CDOTAUserMsg_ReceivedXmasGift.Parser},
        //    /* 503 */ {503, CDOTAUserMsg_UpdateSharedContent.Parser},
        //    /* 504 */ {504, CDOTAUserMsg_TutorialRequestExp.Parser},
        //    /* 505 */ {505, CDOTAUserMsg_TutorialPingMinimap.Parser},
        //    /* 507 */ {507, CDOTAUserMsg_ShowSurvey.Parser},
        //    /* 508 */ {508, CDOTAUserMsg_TutorialFade.Parser},
        //    /* 509 */ {509, CDOTAUserMsg_AddQuestLogEntry.Parser},
        //    /* 511 */ {511, CDOTAUserMsg_TutorialFinish.Parser},
        //    /* 513 */ {513, CDOTAUserMsg_SendGenericToolTip.Parser},
        //    /* 514 */ {514, CDOTAUserMsg_SendFinalGold.Parser},
        //    /* 515 */ {515, CDOTAUserMsg_CustomMsg.Parser},
        //    /* 516 */ {516, CDOTAUserMsg_CoachHUDPing.Parser},
        //    /* 517 */ {517, CDOTAUserMsg_ClientLoadGridNav.Parser},
        //    /* 523 */ {523, CDOTAUserMsg_AbilityPing.Parser},
        //    /* 524 */ {524, CDOTAUserMsg_ShowGenericPopup.Parser},
        //    /* 525 */ {525, CDOTAUserMsg_VoteStart.Parser},
        //    /* 526 */ {526, CDOTAUserMsg_VoteUpdate.Parser},
        //    /* 527 */ {527, CDOTAUserMsg_VoteEnd.Parser},
        //    /* 528 */ {528, CDOTAUserMsg_BoosterState.Parser},
        //    /* 529 */ {529, CDOTAUserMsg_WillPurchaseAlert.Parser},
        //    /* 530 */ {530, CDOTAUserMsg_TutorialMinimapPosition.Parser},
        //    /* 531 */ {531, CDOTAUserMsg_PlayerMMR.Parser},
        //    /* 535 */ {535, CDOTAUserMsg_StatsMatchDetails.Parser},
        //    /* 536 */ {536, CDOTAUserMsg_MiniTaunt.Parser},
        //    /* 537 */ {537, CDOTAUserMsg_BuyBackStateAlert.Parser},
        //    /* 538 */ {538, CDOTAUserMsg_SpeechBubble.Parser},
        //    /* 539 */ {539, CDOTAUserMsg_CustomHeaderMessage.Parser},
        //    /* 540 */ {540, CDOTAUserMsg_QuickBuyAlert.Parser},
        //    /* 541 */ {541, CDOTAUserMsg_StatsHeroMinuteDetails.Parser},
        //    /* 545 */ {545, CDOTAUserMsg_GlyphAlert.Parser},
        //    /* 546 */ {546, CDOTAUserMsg_BeastChat.Parser},
        //    /* 548 */ {548, CDOTAUserMsg_CustomHudElement_Create.Parser},
        //    /* 549 */ {549, CDOTAUserMsg_CustomHudElement_Modify.Parser},
        //    /* 550 */ {550, CDOTAUserMsg_CustomHudElement_Destroy.Parser},
        //    /* 551 */ {551, CDOTAUserMsg_CompendiumState.Parser},
        //    /* 556 */ {556, CDOTAUserMsg_UpdateQuestProgress.Parser},
        //    /* 559 */ {559, CDOTAUserMsg_QuestStatus.Parser},
        //    /* 560 */ {560, CDOTAUserMsg_SuggestHeroPick.Parser},
        //    /* 561 */ {561, CDOTAUserMsg_SuggestHeroRole.Parser},
        //    /* 562 */ {562, CDOTAUserMsg_KillcamDamageTaken.Parser},
        //    /* 566 */ {566, CDOTAUserMessage_RequestItemSuggestions.Parser},
        //    /* 569 */ {569, CDOTAUserMessage_ChatWheelCooldown.Parser},
        //    /* 570 */ {570, CDOTAUserMessage_DismissAllStatPopups.Parser},
        //    /* 571 */ {571, CDOTAUserMessage_TE_DestroyProjectile.Parser},
        //    /* 573 */ {573, CDOTAUserMessage_AbilityDraftRequestAbility.Parser},
        //    /* 574 */ {574, CDOTAUserMessage_ItemSold.Parser},
        //    /* 578 */ {578, CDOTAUserMsg_ReplaceQueryUnit.Parser},
        //    /* 579 */ {579, CDOTAUserMsg_EmptyTeleportAlert.Parser},

        };
    }
}